<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">
            <EditText
                android:id="@+id/profile_id"
                android:inputType="text"
                android:hint="@string/register_id"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_width="285dp" />

            <EditText
                android:id="@+id/profile_name"
                android:inputType="textPersonName"
                android:hint="@string/register_name"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_width="285dp" />

            <EditText
                android:id="@+id/profile_age"
                android:hint="@string/register_age"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_width="285dp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/profile_password"
                android:hint="@string/register_password"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_width="285dp"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/profile_quote"
                android:hint="@string/quote"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_width="285dp"
                android:inputType="textPassword"/>


            <Button
                android:id="@+id/register_register_btn"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SAVE" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
